--- a/src/reusables/CustomButton/_customButton.scss
+++ b/src/reusables/CustomButton/_customButton.scss
@@ -11,10 +11,10 @@
 		justify-content: center;
     align-items: center;
     margin: 0 auto;
-		width: 122px;
 		font-size: 16px;
 		img {
 			margin-right: 12px;
+			max-width: 24px
 		}
 	}
 }
