--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ $headerBlue: #2081C3;
 $green: #52A435;
 
 @import './mixins.scss';
+@import './animations.scss';
 
 @import './reusables/CustomButton/customButton.scss';
 @import './reusables/CustomCurve/customCurve.scss';
