--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,8 @@ $lightBlue: #F4FCFF;
 $skyBlue: #88B2FF;
 $headerBlue: #2081C3;
 $green: #52A435;
+$leftOffset: calc(-1*(100vw - 540px)/2);
+$maxMobileWidth: 490px;
 
 @import './mixins.scss';
 @import './animations.scss';
@@ -20,12 +22,16 @@ $green: #52A435;
 @import './reusables/CustomCurve/customCurve.scss';
 @import './reusables/Carousel/customCarousel.scss';
 @import './reusables/Form/customForm.scss';
+@import './reusables/Mc/mc.scss';
 
 .mikeyriver {
   background: $lightBlue;
   min-height: 100vh;
   overflow: hidden;
-  
+
+  max-width: 840px;
+  margin: 0 auto;
+
   section { 
     text-align: center;
     min-height: 80vh;
@@ -133,7 +139,7 @@ $green: #52A435;
     &__divider {
       width: 100%;
       position: absolute;
-      top: -100px;
+      top: -115px;
       left: 0px;
     }
 
@@ -150,7 +156,9 @@ $green: #52A435;
   &__resume {
     position: relative;
     @include container-padding;
-
+    padding: 0px 20px 30px 20px;
+    min-height: 1024px !important; 
+  
     & > h1 {
       margin-top: 10px;
     }
@@ -165,5 +173,15 @@ $green: #52A435;
   &__form {
     padding: 1px 20px 100px 20px;
     background: #1A1A21;
+  }
+
+  @media(min-width: $maxMobileWidth) and (min-height: 1024px) {
+    &__form {
+      min-height: 60vh !important;
+      .customForm {
+        max-width: 500px;
+        margin: 0 auto;
+      }
+    }
   }
 }
