--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,15 @@ $lightBlue: #F4FCFF;
 $skyBlue: #88B2FF;
 $headerBlue: #2081C3;
 $green: #52A435;
-$leftOffset: calc(-1*(100vw - 540px)/2);
+
 $maxMobileWidth: 490px;
+$maxTabletWidth: 840px;
+
+// 60vw max width of container + 40px from padding
+$leftOffset: calc(-1*(100vw - (60vw + 40px))/2);
+
+$leftOffsetNonMobile: calc(-1*(100vw - (480px + 40px))/2);
+
 
 @import './mixins.scss';
 @import './animations.scss';
@@ -29,7 +36,7 @@ $maxMobileWidth: 490px;
   min-height: 100vh;
   overflow: hidden;
 
-  max-width: 840px;
+  max-width: $maxTabletWidth;
   margin: 0 auto;
 
   section { 
@@ -77,7 +84,6 @@ $maxMobileWidth: 490px;
       &:nth-of-type(2) {
         text-align: center;
         h2 {
-          width: 60vw;
           margin: auto;
           line-height: 47px;
           font-size: 32px;
@@ -175,11 +181,30 @@ $maxMobileWidth: 490px;
     background: #1A1A21;
   }
 
-  @media(min-width: $maxMobileWidth) and (min-height: 1024px) {
+  // tablet
+  @media(min-width: $maxMobileWidth) {
+    &__nav {
+      // scroll down svg
+      & > svg {
+        width: 280px !important;
+        height: auto;
+        transform: translateY(20px);
+      }
+      & > div:first-child {
+        height: unset;
+      } 
+    }
+
+    &__basic {
+      & > div {
+        p { padding: 0px 5vw; }
+      }
+    }
+
     &__form {
       min-height: 60vh !important;
       .customForm {
-        max-width: 500px;
+        max-width: 550px;
         margin: 0 auto;
       }
     }
