--- a/src/reusables/Carousel/_customCarousel.scss
+++ b/src/reusables/Carousel/_customCarousel.scss
@@ -3,7 +3,8 @@
   &__item {
     &__img {
       width: 100%;
-      height: 180px;
+      height: 30vh;
+      max-height: 240px;
       background-size: cover !important;
     }
     p {
@@ -30,6 +31,6 @@
     }
     position: absolute;
     width: 100vw;
-    left: $leftOffset;
+    left: $leftOffsetNonMobile;
   }
 }
