--- a/src/reusables/CustomCurve/_customCurve.scss
+++ b/src/reusables/CustomCurve/_customCurve.scss
@@ -2,7 +2,7 @@
   &.custom-shape-divider-bottom-1664115935 {
     position: absolute;
     top: -159px;
-    left: $leftOffset;
+    left: $leftOffsetNonMobile;
     width: 100vw;
     overflow: hidden;
     line-height: 0;
