--- a/_mixins.scss
+++ b/_mixins.scss
@@ -31,6 +31,11 @@
     max-width: 480px;
     margin: 0 auto;
   }
+
+  @media(min-width: $maxTabletWidth) {
+    max-width: 670px;
+    margin: 0 auto;
+  }
 }
 
 @mixin img-p-container {
@@ -83,7 +88,8 @@
 
   &__animation {
       &-enter-done {
-          :nth-child(odd):not(.carousel-slider *), :nth-child(even):not(.carousel-slider *) {
+          :nth-child(odd):not(.carousel-slider *):not(.mc__tree2):not(.mc__tree),
+          :nth-child(even):not(.carousel-slider *):not(.mc__tree2):not(.mc__tree) {
               transform: translateX(0) !important;
               opacity: 1 !important;
           }
