--- a/src/reusables/Carousel/_customCarousel.scss
+++ b/src/reusables/Carousel/_customCarousel.scss
@@ -33,4 +33,8 @@
     width: 100vw;
     left: $leftOffsetNonMobile;
   }
+
+  @media (min-width: $maxTabletWidth) {
+    left: $leftOffsetNonTablet;
+  }
 }
