--- a/src/reusables/CustomCurve/_customCurve.scss
+++ b/src/reusables/CustomCurve/_customCurve.scss
@@ -31,4 +31,17 @@
       height: 81px;
     }
   }
+
+  /** For desktop devices **/
+  @media (min-width: $maxTabletWidth) {
+    &.custom-shape-divider-bottom-1664115935 {
+      left: $leftOffsetNonTablet;
+      top: -90px;
+    }
+
+    &.custom-shape-divider-bottom-1664115935 svg {
+      width: calc(100% + 1.3px);
+      height: 81px;
+    }
+  }
 }
