--- a/src/reusables/Carousel/_customCarousel.scss
+++ b/src/reusables/Carousel/_customCarousel.scss
@@ -36,5 +36,8 @@
 
   @media (min-width: $maxTabletWidth) {
     left: $leftOffsetNonTablet;
+    &__item {
+      padding: 0px 80px;
+    }
   }
 }
