--- a/_animations.scss
+++ b/_animations.scss
@@ -4,16 +4,16 @@
     
     ul li {
         &:nth-child(1) {
-            transform: translateY(-100px);
-            transition: transform, .2s ease;
+            transform: translateY(-200px);
+            transition: all, .2s ease;
         }
         &:nth-child(2) {
-            transform: translateY(-100px);
-            transition: transform .25s ease;
+            transform: translateY(-200px);
+            transition: all .25s ease;
         }
         &:nth-child(3) {
-            transform: translateY(-100px);
-            transition: transform, .30s ease;
+            transform: translateY(-200px);
+            transition: all, .30s ease;
         }
         
         transition: opacity .1s ease;
