--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ $leftOffsetNonTablet: calc(-1*(100vw - (670px + 40px))/2);
 @import './reusables/CustomCurve/customCurve.scss';
 @import './reusables/Carousel/customCarousel.scss';
 @import './reusables/Form/customForm.scss';
+@import './reusables/Loading/loading.scss';
 @import './reusables/Clouds/clouds.scss';
 @import './reusables/Solo/solo.scss';
 @import './reusables/Mc/mc.scss';
