--- a/src/reusables/Solo/_solo.scss
+++ b/src/reusables/Solo/_solo.scss
@@ -7,7 +7,22 @@
 	opacity: 0;
 	z-index: -1;
 	transition: opacity .2s ease, z-index 1s ease;
-	&.show {
+	
+	&__p {
+		opacity: 0;
+		z-index: -1;
+		position: fixed;
+    bottom: 40px;
+    right: 10px;
+    z-index: 1;
+    width: 267px;
+    background: white;
+    padding: 10px 15px;
+    border-radius: 17px;
+    box-shadow: -2px 3px 20px 2px #00000066;
+		transition: opacity .2s ease, z-index 1s ease;
+	}
+	&.show, &__p.show {
 		opacity: 1;
 		z-index: 10;
 	}
