--- a/src/reusables/Solo/_solo.scss
+++ b/src/reusables/Solo/_solo.scss
@@ -1,6 +1,5 @@
 .solo {
 	position: fixed;
-	z-index: 10;
 	&--still {
 		position: relative;
 	}
@@ -25,6 +24,7 @@
 	&.show, &__p.show {
 		opacity: 1;
 		z-index: 10;
+		transition: opacity .2s ease, z-index 1s ease;
 	}
 }
 
