--- a/src/reusables/Carousel/_customCarousel.scss
+++ b/src/reusables/Carousel/_customCarousel.scss
@@ -10,6 +10,9 @@
     p {
       margin-bottom: 35px;
     }
+    button {
+      padding: 16px 60px;
+    }
     padding-bottom: 65px;
   }
   .dot {
@@ -25,6 +28,10 @@
   @media(min-width: $maxMobileWidth) {
     &__item {
       padding: 0px 10px;
+      p {
+        margin-bottom: 0px;
+        height: 85px;
+      }
     }
     .carousel-slider {
       min-height: 530px;
