--- a/src/reusables/CustomButton/_customButton.scss
+++ b/src/reusables/CustomButton/_customButton.scss
@@ -1,5 +1,8 @@
 .customButton {
 	button {
+		&[disabled] {
+			opacity: .2;
+		}
 		cursor: pointer;
 		text-align: center;
 		padding: 16px 100px;
