Finish Port Ish I Think

--- a/src/App.scss
+++ b/src/App.scss
@@ -225,7 +225,7 @@ $leftOffsetNonTablet: calc(-1*(100vw - (670px + 40px))/2);
       min-height: 1200px !important;
       position: relative;
       & > div {
-        p { padding: 0px 5vw; }
+        p { padding: 0px 100px; }
       }
     }
 
@@ -299,6 +299,14 @@ $leftOffsetNonTablet: calc(-1*(100vw - (670px + 40px))/2);
     &__music {
       &__divider {
         top: -80px;
+      } 
+    }
+  }
+
+  @media(min-width: 1780px) {
+    &__music {
+      &__divider {
+        top: -100px;
       } 
     }
   }
