--- a/src/reusables/Carousel/_customCarousel.scss
+++ b/src/reusables/Carousel/_customCarousel.scss
@@ -9,6 +9,7 @@
     }
     p {
       margin-bottom: 35px;
+      overflow: auto;
     }
     button {
       padding: 16px 60px;
@@ -30,7 +31,7 @@
       padding: 0px 10px;
       p {
         margin-bottom: 0px;
-        height: 85px;
+        height: 100px;
       }
     }
     .carousel-slider {
