--- a/src/reusables/Carousel/_customCarousel.scss
+++ b/src/reusables/Carousel/_customCarousel.scss
@@ -12,7 +12,8 @@
       overflow: auto;
     }
     button {
-      padding: 16px 60px;
+      padding: 16px;
+      width: 80%;
     }
     padding-bottom: 85px;
   }
@@ -28,7 +29,7 @@
 
   @media(min-width: $maxMobileWidth) {
     &__item {
-      padding: 0px 10px;
+      padding: 0px 10px 85px 10px;
       p {
         margin-bottom: 0px;
         height: 120px;
@@ -44,8 +45,5 @@
 
   @media (min-width: $maxTabletWidth) {
     left: $leftOffsetNonTablet;
-    &__item {
-      padding: 0px 80px;
-    }
   }
 }
