Adjust carousel dot size

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@ $leftOffsetNonTablet: calc(-1*(100vw - (670px + 40px))/2);
 @import './reusables/Loading/loading.scss';
 @import './reusables/Clouds/clouds.scss';
 @import './reusables/Solo/solo.scss';
-@import './reusables/Mc/mc.scss';
+@import './reusables/MC/mc.scss';
 
 .mikeyriver {
   background: $lightBlue;
